// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateInflation with normalized fixtures > legacy-empty deterministic snapshot 1`] = `
{
  "calculated_at": "1970-01-01T00:00:00.000Z",
  "engine_contract_version": "1",
  "inflation_bounded_by": "none",
  "inflation_factor": 60,
  "inflation_model": "global_v1",
  "inflation_raw": 60,
  "phase_indicator": "early",
  "players_remaining": 2,
  "pool_value_remaining": 52,
  "recommended_bid_note": "recommended_bid is a phase-aware expected clearing price (early premium for stars, late depth compression toward $1–$3)",
  "remaining_slots": 36,
  "team_adjusted_value_note": "team_adjusted_value scales adjusted_value by roster need, dollars per open slot vs league peers, remaining-slot scarcity, and replacement drop-off for eligible slots",
  "total_budget_remaining": 3120,
  "user_team_id_used": "team_1",
  "valuation_model_version": Any<String>,
  "valuations": [
    {
      "adjusted_value": 2400,
      "adp": 5,
      "baseline_components": {
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_value": 40,
      "edge": 768,
      "indicator": "Fair Value",
      "inflation_adjustment": 2360,
      "inflation_factor": 60,
      "name": "Alpha",
      "player_id": "1",
      "position": "OF",
      "recommended_bid": 2232,
      "scarcity_adjustment": 0,
      "team": "NYY",
      "team_adjusted_value": 3000,
      "tier": 1,
    },
    {
      "adjusted_value": 720,
      "adp": 50,
      "baseline_components": {
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_value": 12,
      "edge": 240.72,
      "indicator": "Fair Value",
      "inflation_adjustment": 708,
      "inflation_factor": 60,
      "name": "Beta",
      "player_id": "2",
      "position": "SP",
      "recommended_bid": 479.28,
      "scarcity_adjustment": 0,
      "team": "BOS",
      "team_adjusted_value": 720,
      "tier": 3,
    },
  ],
}
`;

exports[`calculateInflation with normalized fixtures > nested-after-pick applies player_ids filter 1`] = `
{
  "calculated_at": "1970-01-01T00:00:00.000Z",
  "engine_contract_version": "1",
  "inflation_bounded_by": "none",
  "inflation_factor": 255.4167,
  "inflation_model": "global_v1",
  "inflation_raw": 255.416667,
  "phase_indicator": "early",
  "players_remaining": 1,
  "pool_value_remaining": 12,
  "recommended_bid_note": "recommended_bid is a phase-aware expected clearing price (early premium for stars, late depth compression toward $1–$3)",
  "remaining_slots": 35,
  "team_adjusted_value_note": "team_adjusted_value scales adjusted_value by roster need, dollars per open slot vs league peers, remaining-slot scarcity, and replacement drop-off for eligible slots",
  "total_budget_remaining": 3065,
  "user_team_id_used": "team_1",
  "valuation_model_version": Any<String>,
  "valuations": [
    {
      "adjusted_value": 3065,
      "adp": 50,
      "baseline_components": {
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_value": 12,
      "edge": 201.17,
      "indicator": "Fair Value",
      "inflation_adjustment": 3053,
      "inflation_factor": 255.4167,
      "name": "Beta",
      "player_id": "2",
      "position": "SP",
      "recommended_bid": 2850.45,
      "scarcity_adjustment": 0,
      "team": "BOS",
      "team_adjusted_value": 3051.62,
      "tier": 3,
    },
  ],
}
`;

exports[`parseValuationRequest + root fixtures > normalizes legacy-empty.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": undefined,
  "deterministic": false,
  "drafted_players": [],
  "hitter_budget_pct": undefined,
  "inflation_model": "global_v1",
  "league_scope": "Mixed",
  "minors": undefined,
  "num_teams": 12,
  "player_ids": undefined,
  "pos_eligibility_threshold": undefined,
  "pre_draft_rosters": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "0.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": undefined,
  "seed": undefined,
  "taxi": undefined,
  "total_budget": 260,
  "user_team_id": undefined,
}
`;

exports[`parseValuationRequest + root fixtures > normalizes nested-after-pick.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": "after_pick_1",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": false,
      "name": "Star Player",
      "paid": 55,
      "pick_number": 1,
      "player_id": "1",
      "position": "OF",
      "positions": [
        "OF",
        "DH",
      ],
      "team": "NYY",
      "team_id": "team_1",
    },
  ],
  "hitter_budget_pct": undefined,
  "inflation_model": "global_v1",
  "league_scope": "Mixed",
  "minors": undefined,
  "num_teams": 12,
  "player_ids": [
    "2",
  ],
  "pos_eligibility_threshold": undefined,
  "pre_draft_rosters": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "1.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": undefined,
  "seed": undefined,
  "taxi": undefined,
  "total_budget": 260,
  "user_team_id": undefined,
}
`;

exports[`parseValuationRequest + root fixtures > normalizes nested-pre-draft.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": "pre_draft",
  "deterministic": true,
  "drafted_players": [],
  "hitter_budget_pct": 0.65,
  "inflation_model": "global_v1",
  "league_scope": "Mixed",
  "minors": {},
  "num_teams": 12,
  "player_ids": undefined,
  "pos_eligibility_threshold": 5,
  "pre_draft_rosters": {
    "team_1": [],
  },
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "1.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": "5x5",
  "seed": undefined,
  "taxi": {},
  "total_budget": 260,
  "user_team_id": undefined,
}
`;
